--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,7 +55,11 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.11f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Script\MenuManager.cs" />
     <Compile Include="Assets\Script\ButtonFunction.cs" />
+    <Compile Include="Assets\Script\ValidationScript.cs" />
+    <Compile Include="Assets\Script\DifficultyManager.cs" />
+    <Compile Include="Assets\Script\QuizManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
